# Beso

./: .gitignore  CMakeLists.txt  EngineService.cpp  EngineService.h  MainWindow.cpp  MainWindow.h  README.md  ScenarioClient.pro  WebsocketService.cpp  WebsocketService.h  env_example  main.cpp  mainwindow.ui  Общая схема.json  Подробная схема.json
core/: EnvConfig.cpp  EnvConfig.h  QLogStream.cpp  QLogStream.h
data/BD/: BD_objectsSHIP212345.json  BD_objectsSHIP255.json
data/Sochi2/: 200T59V.RSC  200t02w.RSC  K3704.dir  K3704.hdr  K3704.map  K3704.map.ini  K3704.mtw  K3704.sem  K3704.sxf  temp.sit  temp1.sda  temp1.shd  temp1.shd.si2  temp1.sit  temp1.sse
db_service/: ForcesEditor.cpp  ForcesEditor.h  ScenarioEditor.cpp  ScenarioEditor.h  ScenarioEditor.ui  ScenarioParser.cpp  ScenarioParser.h  ScenarioTacticalObjects.cpp  ScenarioTacticalObjects.h  ScenarioTacticalObjects.ui  modelobjectsform.cpp  modelobjectsform.h  modelobjectsform.ui
db_service/components/: addmodelobjectsdialog.cpp  addmodelobjectsdialog.h  addmodelobjectsdialog.ui  texteditdialog.cpp  texteditdialog.h  texteditdialog.ui
db_service/modules/: daddscenariointeraction.cpp  daddscenariointeraction.h  daddscenariointeraction.ui  daddscenarioobject.cpp  daddscenarioobject.h  daddscenarioobject.ui  dscenariodistrict.cpp  dscenariodistrict.h  dscenariodistrict.ui
db_service/services/: DBDataStorageService.cpp  DBDataStorageService.h  DataStorageService.cpp  DataStorageService.h  DataStorageServiceFactory.cpp  DataStorageServiceFactory.h  FileDataStorageService.cpp  FileDataStorageService.h
delegates/: PropertyItemDelegate.cpp  PropertyItemDelegate.h
diagramscene/: AlgorithmPropertiesDialog.cpp  AlgorithmPropertiesDialog.h  DiagramSceneDlg.cpp  DiagramSceneDlg.h  ObjectSelectDialog.cpp  ObjectSelectDialog.h  PropertiesDialog.cpp  PropertiesDialog.h  algorithmitem.cpp  algorithmitem.h  algoritmitem.cpp  algoritmitem.h  arrow.cpp  arrow.h  diagramcolors.cpp  diagramcolors.h  diagramitem.cpp  diagramitem.h  diagramscene.cpp  diagramscene.h  diagramtextitem.cpp  diagramtextitem.h  itemtoolbox.cpp  itemtoolbox.h  itemtoolbox.ui
map_widget/: .map_coordinates.h.swp  MapWidget.cpp  MapWidget.h  SimulationEventWidgetInMap.cpp  SimulationEventWidgetInMap.h  map_enums.h  mapwidget.ui
map_widget/map_additional/: MapCompass.cpp  MapCompass.h  MapCoordinates.cpp  MapCoordinates.h  MapInformer.cpp  MapInformer.h  MapScale.cpp  MapScale.h  MapToolPanel.cpp  MapToolPanel.h  map_coordinates.ui  map_scale.ui  map_tool_panel.ui
map_widget/map_tools/: CoordCtx.cpp  CoordCtx.h  SignDrawer.cpp  SignDrawer.h  SignEditor.cpp  SignEditor.h
map_widget/qmapcomponents/: converter.py  medapi.h  mwhandlr.h  qdmact.cpp  qdmact.h  qdmactline.cpp  qdmactline.h  qdmactprint.cpp  qdmactprint.h  qdmactpt.cpp  qdmactpt.h  qdmanimator.cpp  qdmanimator.h  qdmapcomp.cpp  qdmapcomp.h  qdmapcomp_plugin.cpp  qdmapcomp_plugin.h  qdmappasp.cpp  qdmappasp.h  qdmcmp.cpp  qdmcmp.h  qdmcompa.cpp  qdmcompa.h  qdmconv.cpp  qdmconv.h  qdmd3d.cpp  qdmd3d.h  qdmdcmtw.cpp  qdmdcmtw.h  qdmdgtob.cpp  qdmdgtob.h  qdmdlist.cpp  qdmdlist.h  qdmdprn.cpp  qdmdprn.h  qdmdsel.cpp  qdmdsel.h  qdmdwmspopup.cpp  qdmdwmspopup.h  qdmfind.cpp  (+46 more)
models/: ActionModel.cpp  ActionModel.h  AlgorithParamModel.cpp  AlgorithParamModel.h  AlgorithmModel.cpp  AlgorithmModel.h  Feature.cpp  Feature.h  FeatureModel.cpp  FeatureModel.h  FileModel.cpp  FileModel.h  GeoPoint.cpp  GeoPoint.h  InteractionModel.cpp  InteractionModel.h  InteractionModelTemplate.cpp  InteractionModelTemplate.h  InteractionTemplateItem.cpp  InteractionTemplateItem.h  ObjectScenarioModel.cpp  ObjectScenarioModel.h  PropertyModel.cpp  PropertyModel.h  SimulationParametersModel.cpp  SimulationParametersModel.h  TacticalSignModel.cpp  TacticalSignModel.h
resources/: .dark_theme.qss.swp  dark_theme.qss  dark_theme_old.qss  resource.qrc
scenario/: 01 Маневр уклонения Корабля от бэк.json  01 Сценарий №1.json  02 Сценарий №1.json  02 визуализация маршрута движения БПЛА.json  03 Отработка ядра БЭК Камикадзе.json  03 Сценарий №1 small.json  04 отладка связи.json  04.01 отладка связи.json  05 Отработка места атаки бэк корабль.json  06 demo.01.json  06 demo.02.json  06 demo.03.json  bpla_real.json  fox_rabbit_cpp_v4.json  fox_rabbit_cpp_v5.json  move_by_path_with_radius.json  object_example.json  path_graph.json  path_graph_empty.json  path_rrt_star.json  scenario_1.json  scenario_1_1.json  scenario_1_1_ak.json  target_distribution.json  Маневр уклонения Корабля от бэк.json  Поражение БЭК с помощью Артиллерийского Комплекса.json  Расчет видимости 4.2 и 13.3.json  видимости одного объекта другим в режиме шумопеленгования ГАС.json  маневр уклонения.json  модель видимости в инфракрасном диапазоне - копия.json  модель видимости в инфракрасном диапазоне.json  модель видимости по дальности.json  отладка бпла поведенческое ядро.json  отладка бэк поведенческое ядро.json  радиосвязь между двумя объектами.json  чистый.json  эффективности поражения пулемётом воздушной цели.json
scenario/001/: 111.json  scen061024new.json  ship.route.json
scenario/calcsea/: GetVisibilityObj1Obj2 - видимость одного объекта другим.json  GetVisibilityObj1Obj2Ver2 - видимость одного объекта другим.json  GetVisibilityRadioObj1Obj2 - радио видимость.json  ifInfraredVisibility видимость в инфракрасном диапазоне.json
scenario/old/: bpla_real.json  fox_rabbit_cpp.json  fox_rabbit_cpp_v2.json  fox_rabbit_cpp_v3.json  path_rrt_star.json  (+2 more)
signs/: GeoUtil.cpp  GeoUtil.h  SignAnimator.cpp  SignAnimator.h  SignBase.cpp  SignBase.h  SignController.cpp  SignController.h  SignFactory.cpp  SignFactory.h  SignShip.cpp  SignShip.h  sign_enums.h
tests/: CMakeLists.txt  run_tests.sh  test_main.cpp  test_propertymodeltest.cpp  test_propertymodeltest.h  test_scenarioparser.cpp  test_scenarioparser.h
tests/test_data/: algorithm_test.json  file.json  interactions.json  object_test.json  scenario_test.json  simulation_parameters.json
ui/: DObjectProperties.cpp  DObjectProperties.h  DObjectProperties.ui
utils/: ParametersChecker.cpp  ParametersChecker.h
(+183 files in other folders)
